--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,29 @@ html, body {
   font-family: 'Karla', sans-serif;
 }
 
+/*typography*/
+
+h1, h2, h3{
+  text-align: center;
+}
+
+h1, h2{
+  color: #EED6D3;
+  margin: 0;
+}
+
+h1{
+  font-size: 28px;
+}
+
+h2 {
+  font-size: 16px;
+}
+
+h3{
+  margin: 25px;
+}
+
 /* Layout */
 
 header{
