--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,39 @@ label{
   cursor: pointer;
 }
 
+.highlight{
+  background-color: #fff0ee;
+  color: #bd301d;
+  font-weight: bold;
+}
+
+.radio:last-child{
+  border-bottom: 0;
+}
+
+input[type="radio"]{
+  cursor: pointer;
+}
+
+.gifs-check{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 16px;
+}
+
+.gifs-check-label{
+  width: unset;
+  margin-right: 5px;
+}
+
+.get-image-btn{
+  background-color: #67595e;
+  color: #eed6d3;
+  padding: 15px 19px;
+  font-size: 24px;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 8px;
+}
+
