--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ label{
   background-color: #fff0ee;
   color: #bd301d;
   font-weight: bold;
+  accent-color: #bd301d;
 }
 
 .radio:last-child{
@@ -152,3 +153,4 @@ input[type="radio"]{
   background-color: #bd301d;
   border: 2px solid #bd301d;
 }
+
