--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ input[type="radio"]{
   border: none;
   border-radius: 5px;
   margin-bottom: 8px;
+  cursor: pointer;
 }
 
 .controls-container{
