--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,10 @@ input[type="radio"]{
   background-color: #bd301d;
   border: 2px solid #bd301d;
 }
+
+@media only screen and (max-width: 480px) {
+  .meme-modal {
+    width: 350px;
+    height: 390px;
+  }
+}
